substrate/frame/support/test/tests/split_ui/section_not_imported.stderr
error[E0433]: failed to resolve: use of undeclared type `MyStorageMap`
  --> tests/split_ui/section_not_imported.rs:44:4
   |
44 |             MyStorageMap::<T>::insert(1, 2);
   |             ^^^^^^^^^^^^
   |             |
   |             use of undeclared type `MyStorageMap`
   |             help: a struct with a similar name exists: `StorageMap`
